# avito_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: bargaining_rules.yaml  delivery_rules.yaml  meeting_rules.yaml  products.json
docs/: MONITORING_SETUP.md
scripts/: google_calendar_auth.py  setup_vectorstore.py
src/: config.py  main.py
src/agent/: graph.py  nodes.py  state.py  tools.py
src/bargaining/: negotiation_engine.py
src/dialogue/: context_manager.py  slot_manager.py
src/guardrails/: validators.py
src/integrations/: calendar_client.py  calendar_service.py  console_interface.py  telegram_notifier.py
src/llm/: deepseek_client.py  prompts.py
src/meetings/: meeting_validator.py
src/observability/: langfuse_config.py  logger.py  metrics.py  tracers.py
src/product/: delivery_validator.py  models.py  repository.py
src/rag/: __init__.py  embeddings.py  hybrid_retriever.py  query_expander.py  vectorstore.py
